fixes, new features, config

--- a/BlogPhone/appsettings.json
+++ b/BlogPhone/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\mssqllocaldb;Database=database;Trusted_Connection=True",
-    "New": "Server=(localdb)\\mssqllocaldb;Database=DBnew;Trusted_Connection=True"
+    "Default": "Server=(localdb)\\mssqllocaldb;Database=database;Trusted_Connection=True"
   }
 }
