--- a/BlogPhone/appsettings.json
+++ b/BlogPhone/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\mssqllocaldb;Database=database;Trusted_Connection=True"
+    "Development": "Server=(localdb)\\mssqllocaldb;Database=database;Trusted_Connection=True",
+    "RegRu": "Server=localhost;Database=u1690754_main;User Id=u1690754_user;Password=LenaGolovach777;"
   }
 }
