--- a/BlogPhone/Properties/launchSettings.json
+++ b/BlogPhone/Properties/launchSettings.json
@@ -14,14 +14,14 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7230;http://localhost:5230",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development" // Development
+        "ASPNETCORE_ENVIRONMENT": "Production" // Development
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development" // Production
+        "ASPNETCORE_ENVIRONMENT": "Production" // Production
       }
     }
   }
