auth woking, fixes

--- a/BlogPhone/appsettings.json
+++ b/BlogPhone/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Development": "Server=(localdb)\\mssqllocaldb;Database=database;Trusted_Connection=True",
-    "RegRu": "Server=localhost;Database=u1690754_main;User Id=u1690754_user;Password=LenaGolovach777;"
+    "DB_Host_Dev": "Server=31.31.196.234;Database=u1690754_main;User Id=u1690754_user;Password=LenaGolovach777",
+    "RegRu": "Server=localhost;Database=u1690754_main;User Id=u1690754_user;Password=LenaGolovach777"
   }
 }
