--- a/BlogPhone/appsettings.json
+++ b/BlogPhone/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Development": "Server=(localdb)\\mssqllocaldb;Database=database;Trusted_Connection=True",
+    "LogViewer": "Host=62.109.29.6;Port=32968;Database=main;Username=admin;Password=w0HMCVFq1",
     "DB_Host_Dev": "Server=31.31.196.234;Database=u1690754_bp;User Id=u1690754_admin;Password=LenaGolovach777",
     "RegRu": "Server=localhost;Database=u1690754_bp;User Id=u1690754_admin;Password=LenaGolovach777"
   }
